[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/components/AlternateComponent.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/BaseComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Light.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/drums1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/drums2.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/drums3.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/drums_activate.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/drums4.ogg" type="AudioStream" id=8]

[node name="AlternateComponent" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Light2" parent="." index="1" instance=ExtResource( 3 )]
key = "n"

[node name="Light1" parent="." index="2" instance=ExtResource( 3 )]
key = "b"

[node name="Activate" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource( 7 )

[node name="Drums1" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 4 )

[node name="Drums2" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 5 )

[node name="Drums3" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 6 )

[node name="Drums4" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource( 8 )
